unpackaged/main/default/objects/HONORARIOS_COBRADOS__c/HONORARIOS_COBRADOS__c.object-meta.xml
<CustomObject>
    <label>HONORARIOS COBRADOS</label>
    <nameField>
        <displayFormat>HC-{0000}</displayFormat>
        <label>Nombre de HONORARIOS COBRADOS</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HONORARIOS COBRADOS</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>