unpackaged/main/default/objects/HONORARIOS_COBRADOS__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <referenceTo>Asunto__c</referenceTo>
    <relationshipLabel>HONORARIOS COBRADOS</relationshipLabel>
    <relationshipName>HONORARIOS_COBRADOS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>