unpackaged/main/default/objects/HONORARIOS_COBRADOS__c/fields/CONCEPTO_HON_COB__c.field-meta.xml
<CustomField>
    <fullName>CONCEPTO_HON_COB__c</fullName>
    <label>CONCEPTO HON COB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>